[tool.poetry]
name = "flood-prediction"
version = "0.1.0"
description = ""
authors = ["Szymon Budziak"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src", from = "." },]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"
jupytext = "^1.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
